--- a/.github/workflows/playwright_test.yml
+++ b/.github/workflows/playwright_test.yml
@@ -1,6 +1,10 @@
-name: UnoPim + DAM Playwright Tests
+name: UnoPim Playwright Tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   test:
@@ -15,30 +19,33 @@ jobs:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: unopim
         options: >-
-          --health-cmd="mysqladmin ping -h 127.0.0.1 -uroot -proot"
+          --health-cmd="mysqladmin ping --silent"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=3
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          extensions: mbstring, bcmath, pdo, pdo_mysql, curl, intl, gd
+          extensions: mbstring, bcmath, pdo_mysql
           coverage: none
 
-      - name: Install Composer dependencies
-        working-directory: packages/Webkul/unopim
-        run: composer install --no-interaction --prefer-dist --no-scripts
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
-      - name: Create .env file
-        working-directory: packages/Webkul/unopim
+      - name: Copy or Create .env
         run: |
-          cat <<EOT > .env
+          if [ -f .env.example ]; then
+            cp .env.example .env
+          else
+            cat > .env <<EOL
 APP_NAME=UnoPim
 APP_ENV=testing
 APP_KEY=
@@ -53,51 +60,36 @@ DB_USERNAME=root
 DB_PASSWORD=root
 
 CACHE_DRIVER=file
-SESSION_DRIVER=file
 QUEUE_CONNECTION=sync
-EOT
-          cat .env
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+EOL
+          fi
 
-      - name: Generate app key & migrate DB
-        working-directory: packages/Webkul/unopim
+      - name: Install PHP dependencies
+        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+
+      - name: Generate application key and migrate
         run: |
           php artisan key:generate
           php artisan migrate:fresh --seed
 
       - name: Install DAM module
-        working-directory: packages/Webkul/unopim
-        run: |
-          composer require unopim/dam --no-interaction
-          php artisan migrate --path=packages/DAM/database/migrations
+        run: composer require unopim/dam
 
-      - name: Start UnoPim server
-        working-directory: packages/Webkul/unopim
-        run: php artisan serve --host=0.0.0.0 --port=8000 &
+      - name: Build frontend
+        run: |
+          npm install
+          npm run build
+
+      - name: Start Laravel server in background
+        run: php artisan serve --host=127.0.0.1 --port=8000 &
       
-      - name: Wait for UnoPim to be ready
+      - name: Wait for server
         run: npx wait-on http://127.0.0.1:8000
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps chromium
 
-      - name: Install Playwright dependencies
-        run: |
-          npx playwright install-deps chromium
-          npx playwright install chromium
-
-      - name: Install npm dependencies
-        working-directory: packages/Webkul/unopim
-        run: npm install
-
-      - name: Run Playwright tests
-        working-directory: packages/Webkul/unopim
+      - name: Run Playwright Tests
         run: npx playwright test --reporter=html
-
-      - name: Upload Playwright report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: packages/Webkul/unopim/playwright-report
