--- a/.github/workflows/playwright_test.yml
+++ b/.github/workflows/playwright_test.yml
@@ -1,95 +1,102 @@
-name: UnoPim Playwright Tests
+name: DAM Module Playwright Tests
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push, pull_request]
+
+permissions:
+  contents: read
 
 jobs:
-  test:
+  dam_playwright_tests:
+    name: DAM Module End-to-end UI Test
     runs-on: ubuntu-latest
 
     services:
       mysql:
         image: mysql:8.0
-        ports:
-          - 3306:3306
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: unopim
+        ports:
+          - 3306
         options: >-
-          --health-cmd="mysqladmin ping --silent"
+          --health-cmd="mysqladmin ping"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=3
+          --health-retries=5
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Set up PHP
+      - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          extensions: mbstring, bcmath, pdo_mysql
-          coverage: none
+          extensions: curl, fileinfo, gd, intl, mbstring, openssl, pdo, pdo_mysql, tokenizer, zip
+          ini-values: error_reporting=E_ALL
+          tools: composer:v2
+
+      - name: Running Composer Install
+        run: composer install
+
+      - name: Setting Environment
+        run: |
+          cp .env.example .env
+          sed -i "s|^\(APP_ENV=\s*\).*$|\1testing|" .env
+          sed -i "s|^\(DB_HOST=\s*\).*$|\1127.0.0.1|" .env
+          sed -i "s|^\(DB_PORT=\s*\).*$|\1${{ job.services.mysql.ports['3306'] }}|" .env
+          sed -i "s|^\(DB_DATABASE=\s*\).*$|\1unopim|" .env
+          sed -i "s|^\(DB_USERNAME=\s*\).*$|\1root|" .env
+          sed -i "s|^\(DB_PASSWORD=\s*\).*$|\1root|" .env
+          cat .env
+
+      - name: Install DAM Module
+        run: |
+          # Copy DAM package to packages directory
+          mkdir -p packages/Webkul/DAM
+          cp -r path/to/your/dam/module/* packages/Webkul/DAM/
+          
+          # Add DAMServiceProvider to config
+          sed -i "/Webkul\\\\User\\\\Providers\\\\UserServiceProvider::class,/a \              Webkul\\\\DAM\\\\Providers\\\\DAMServiceProvider::class," config/app.php
+          
+          # Add PSR-4 autoload entry
+          sed -i '/"psr-4": {/a \    "Webkul\\\\DAM\\\\": "packages/Webkul/DAM/src",' composer.json
+          
+          # Update composer and run migrations
+          composer dump-autoload
+          php artisan vendor:publish --provider="Webkul\\DAM\\Providers\\DAMServiceProvider"
+          php artisan migrate --force
+          php artisan db:seed --class="Webkul\\DAM\\Database\\Seeders\\DirectoryTableSeeder"
+
+      - name: Running UnoPim Installer
+        run: |
+          php artisan unopim:install --skip-env-check --skip-admin-creation
+          php artisan migrate --force
+          php artisan serve --host=0.0.0.0 --port=8000 &
+
+      - name: Wait for UnoPim to start
+        run: npx wait-on http://localhost:8000
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: '18'
 
-      - name: Copy or Create .env
+      - name: Install Playwright for DAM tests
         run: |
-          if [ -f .env.example ]; then
-            cp .env.example .env
-          else
-            cat > .env <<EOL
-APP_NAME=UnoPim
-APP_ENV=testing
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
-
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=unopim
-DB_USERNAME=root
-DB_PASSWORD=root
-
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
-EOL
-          fi
-
-      - name: Install PHP dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
-
-      - name: Generate application key and migrate
-        run: |
-          php artisan key:generate
-          php artisan migrate:fresh --seed
-
-      - name: Install DAM module
-        run: composer require unopim/dam
-
-      - name: Build frontend
-        run: |
+          cd packages/Webkul/DAM/tests/e2e-pw
           npm install
-          npm run build
+          npx playwright install-deps chromium
+          npx playwright install chromium
 
-      - name: Start Laravel server in background
-        run: php artisan serve --host=127.0.0.1 --port=8000 &
-      
-      - name: Wait for server
-        run: npx wait-on http://127.0.0.1:8000
+      - name: Run DAM Playwright tests
+        run: |
+          cd packages/Webkul/DAM/tests/e2e-pw
+          npx playwright test --reporter=list
 
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps chromium
-
-      - name: Run Playwright Tests
-        run: npx playwright test --reporter=html
+      - name: Upload Playwright report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: dam-playwright-report
+          path: packages/Webkul/DAM/tests/e2e-pw/playwright-report
