--- a/.github/workflows/playwright_test.yml
+++ b/.github/workflows/playwright_test.yml
@@ -2,9 +2,9 @@ name: DAM Module Playwright Tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 permissions:
   contents: read
@@ -47,8 +47,7 @@ jobs:
 
       - name: Create Environment File
         run: |
-          # Create .env file directly
-          cat > .env << EOF
+          cat > .env << 'EOF'
 APP_ENV=testing
 APP_DEBUG=true
 APP_KEY=
@@ -78,7 +77,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="UnoPim"
+MAIL_FROM_NAME=UnoPim
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -90,17 +89,15 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
-MIX_PUSHER_APP_KEY="\${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="\${PUSHER_APP_CLUSTER}"
+MIX_PUSHER_APP_KEY=${PUSHER_APP_KEY}
+MIX_PUSHER_APP_CLUSTER=${PUSHER_APP_CLUSTER}
 EOF
           cat .env
 
       - name: Install DAM Module
         run: |
-          # Create packages directory if it doesn't exist
           mkdir -p packages/Webkul/DAM
           
-          # Copy DAM module files (adjust source path as needed)
           if [ -d "dam-module/" ]; then
             cp -r dam-module/* packages/Webkul/DAM/
           elif [ -d "packages/Webkul/DAM" ]; then
@@ -111,17 +108,14 @@ EOF
             mkdir -p packages/Webkul/DAM/tests/e2e-pw
           fi
 
-          # Add DAMServiceProvider to config
           if [ -f "config/app.php" ]; then
             sed -i "/Webkul\\\\User\\\\Providers\\\\UserServiceProvider::class,/a \              Webkul\\\\DAM\\\\Providers\\\\DAMServiceProvider::class," config/app.php
           fi
 
-          # Add PSR-4 autoload entry to composer.json
           if [ -f "composer.json" ]; then
             sed -i '/"psr-4": {/a \    "Webkul\\\\DAM\\\\": "packages/Webkul/DAM/src",' composer.json
           fi
 
-          # Update composer autoload
           composer dump-autoload
 
       - name: Running UnoPim Installer
@@ -131,8 +125,7 @@ EOF
           php artisan serve --host=0.0.0.0 --port=8000 &
 
       - name: Wait for UnoPim to start
-        run: |
-          npx wait-on http://localhost:8000 --timeout 60000
+        run: npx wait-on http://localhost:8000 --timeout 60000
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -141,10 +134,8 @@ EOF
 
       - name: Install Playwright for DAM tests
         run: |
-          # Create test directory if it doesn't exist
           mkdir -p packages/Webkul/DAM/tests/e2e-pw
           
-          # Initialize package.json if it doesn't exist
           if [ ! -f "packages/Webkul/DAM/tests/e2e-pw/package.json" ]; then
             cd packages/Webkul/DAM/tests/e2e-pw
             npm init -y
