--- a/.github/workflows/playwright_test.yml
+++ b/.github/workflows/playwright_test.yml
@@ -1,18 +1,19 @@
-name: DAM Module Playwright Tests
+name: Playwright Tests
 
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+on: [push, pull_request]
 
 permissions:
   contents: read
 
 jobs:
-  dam_playwright_tests:
-    name: DAM Module End-to-end UI Test
-    runs-on: ubuntu-latest
+  playwright_tests:
+    name: Playwright End-to-end UI Test
+    runs-on: ${{ matrix.operating-systems }}
+
+    strategy:
+      matrix:
+        operating-systems: [ubuntu-latest]
+        php-versions: ['8.2']
 
     services:
       mysql:
@@ -31,13 +32,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          ref: master
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
+          php-version: ${{ matrix.php-versions }}
           extensions: curl, fileinfo, gd, intl, mbstring, openssl, pdo, pdo_mysql, tokenizer, zip
           ini-values: error_reporting=E_ALL
           tools: composer:v2
@@ -45,117 +44,54 @@ jobs:
       - name: Running Composer Install
         run: composer install
 
-      - name: Create Environment File
+      - name: Setting Environment
         run: |
-          cat > .env << 'EOF'
-APP_ENV=testing
-APP_DEBUG=true
-APP_KEY=
-APP_URL=http://localhost
-
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=${{ job.services.mysql.ports['3306'] }}
-DB_DATABASE=unopim
-DB_USERNAME=root
-DB_PASSWORD=root
-
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME=UnoPim
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY=${PUSHER_APP_KEY}
-MIX_PUSHER_APP_CLUSTER=${PUSHER_APP_CLUSTER}
-EOF
+          cp .env.example .env
+          sed -i "s|^\(APP_ENV=\s*\).*$|\1testing|" .env
+          sed -i "s|^\(DB_HOST=\s*\).*$|\1127.0.0.1|" .env
+          sed -i "s|^\(DB_PORT=\s*\).*$|\1${{ job.services.mysql.ports['3306'] }}|" .env
+          sed -i "s|^\(DB_DATABASE=\s*\).*$|\1unopim|" .env
+          sed -i "s|^\(DB_USERNAME=\s*\).*$|\1root|" .env
+          sed -i "s|^\(DB_PASSWORD=\s*\).*$|\1root|" .env
           cat .env
 
-      - name: Install DAM Module
+      - name: Running UnoPim Installer + DAM
         run: |
-          mkdir -p packages/Webkul/DAM
-          
-          if [ -d "dam-module/" ]; then
-            cp -r dam-module/* packages/Webkul/DAM/
-          elif [ -d "packages/Webkul/DAM" ]; then
-            echo "DAM module already in packages directory"
-          else
-            echo "Warning: DAM module files not found. Creating placeholder structure."
-            mkdir -p packages/Webkul/DAM/src
-            mkdir -p packages/Webkul/DAM/tests/e2e-pw
-          fi
-
-          if [ -f "config/app.php" ]; then
-            sed -i "/Webkul\\\\User\\\\Providers\\\\UserServiceProvider::class,/a \              Webkul\\\\DAM\\\\Providers\\\\DAMServiceProvider::class," config/app.php
-          fi
-
-          if [ -f "composer.json" ]; then
-            sed -i '/"psr-4": {/a \    "Webkul\\\\DAM\\\\": "packages/Webkul/DAM/src",' composer.json
-          fi
-
-          composer dump-autoload
-
-      - name: Running UnoPim Installer
-        run: |
+          # Install UnoPim
           php artisan unopim:install --skip-env-check --skip-admin-creation
-          php artisan migrate --force
+          
+          # Install DAM module
+          php artisan unopim-dam:install --skip-env-check
+          
+          # Run migrations and seed database
+          php artisan migrate:fresh --seed
+          
+          # Start application
           php artisan serve --host=0.0.0.0 --port=8000 &
 
       - name: Wait for UnoPim to start
-        run: npx wait-on http://localhost:8000 --timeout 60000
+        run: npx wait-on http://localhost:8000
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      - name: Install Playwright for DAM tests
+      - name: Install Playwright dependencies
         run: |
-          mkdir -p packages/Webkul/DAM/tests/e2e-pw
-          
-          if [ ! -f "packages/Webkul/DAM/tests/e2e-pw/package.json" ]; then
-            cd packages/Webkul/DAM/tests/e2e-pw
-            npm init -y
-            npm install @playwright/test --save-dev
-          else
-            cd packages/Webkul/DAM/tests/e2e-pw
-            npm install
-          fi
-          
+          cd tests/e2e-pw
+          npm install
           npx playwright install-deps chromium
           npx playwright install chromium
 
-      - name: Run DAM Playwright tests
+      - name: Run Playwright tests
         run: |
-          cd packages/Webkul/DAM/tests/e2e-pw
-          npx playwright test --reporter=list || echo "Playwright tests completed"
+          cd tests/e2e-pw
+          npx playwright test --reporter=list
 
       - name: Upload Playwright report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: dam-playwright-report
-          path: packages/Webkul/DAM/tests/e2e-pw/playwright-report
+          name: playwright-report
+          path: tests/e2e-pw/playwright-report
