--- a/.github/workflows/playwright_test.yml
+++ b/.github/workflows/playwright_test.yml
@@ -19,13 +19,13 @@ jobs:
         ports:
           - 3306
         options: >-
-          --health-cmd="mysqladmin ping -h 127.0.0.1 -uroot -proot"
+          --health-cmd="mysqladmin ping"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup PHP
@@ -36,14 +36,17 @@ jobs:
           ini-values: error_reporting=E_ALL
           tools: composer:v2
 
-      - name: Install UnoPim & DAM
+      - name: Install UnoPim & link DAM
         run: |
-          composer require unopim/unopim --no-interaction --no-progress
-          composer require unopim/dam --no-interaction --no-progress
+          composer create-project unopim/unopim unopim-core --no-interaction --no-progress
+          cd unopim-core
+          composer config repositories.dam '{"type": "path", "url": "../"}'
+          composer require unopim/dam:@dev --no-interaction --no-progress
 
       - name: Setup environment
         run: |
-          cp .env.example .env || touch .env
+          cd unopim-core
+          cp .env.example .env
           sed -i "s|^\(APP_ENV=\s*\).*$|\1testing|" .env
           sed -i "s|^\(DB_HOST=\s*\).*$|\1127.0.0.1|" .env
           sed -i "s|^\(DB_PORT=\s*\).*$|\1${{ job.services.mysql.ports['3306'] }}|" .env
@@ -54,7 +57,9 @@ jobs:
 
       - name: Run UnoPim Installer
         run: |
+          cd unopim-core
           php artisan unopim:install --skip-env-check --skip-admin-creation
+          php artisan unopim-dam:install --skip-env-check
           php artisan migrate:fresh --seed
           php artisan serve --host=0.0.0.0 --port=8000 &
 
