--- a/.github/workflows/playwright_test.yml
+++ b/.github/workflows/playwright_test.yml
@@ -65,7 +65,13 @@ jobs:
           composer dump-autoload
           php artisan optimize:clear
           php artisan vendor:publish --provider="Webkul\\DAM\\Providers\\DAMServiceProvider"
-          php artisan db:seed --class=Webkul\\DAM\\Database\\Seeders\\DirectoryTableSeeder
+
+      - name: Seed DAM database if seeder exists
+        working-directory: unopim
+        run: |
+          php -r "echo class_exists('Webkul\\DAM\\Database\\Seeders\\DirectoryTableSeeder') ? 'true' : 'false';" | grep true && \
+          php artisan db:seed --class=Webkul\\DAM\\Database\\Seeders\\DirectoryTableSeeder || \
+          echo "DirectoryTableSeeder not found, skipping seeding."
 
       - name: Start UnoPim server
         working-directory: unopim
