--- a/.github/workflows/playwright_test.yml
+++ b/.github/workflows/playwright_test.yml
@@ -1,4 +1,4 @@
-name: UnoPim + DAM CI
+name: UnoPim + DAM + Playwright CI
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
           repository: unopim/unopim
           path: unopim
 
-      - name: Checkout DAM (this repo)
+      - name: Checkout DAM module
         uses: actions/checkout@v4
         with:
           repository: kunal-webkul/unopim-digital-asset-management
@@ -56,7 +56,7 @@ jobs:
           php artisan key:generate
           php artisan migrate --force
 
-      - name: Install DAM manually
+      - name: Install DAM module manually
         working-directory: unopim
         run: |
           mkdir -p packages/Webkul
@@ -66,12 +66,14 @@ jobs:
           php artisan optimize:clear
           php artisan vendor:publish --provider="Webkul\\DAM\\Providers\\DAMServiceProvider"
 
-      - name: Start UnoPim server
+      - name: Serve UnoPim instance
         working-directory: unopim
         run: php artisan serve --host=0.0.0.0 --port=8000 &
 
-      - name: Wait for UnoPim
-        run: npx wait-on http://127.0.0.1:8000
+      - name: Wait for UnoPim to be ready
+        run: |
+          npx wait-on http://127.0.0.1:8000 --timeout 60000
+          sleep 5
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -96,7 +98,7 @@ jobs:
           name: playwright-report
           path: unopim/tests/e2e-pw/playwright-report
 
-      - name: Upload Laravel logs on failure
+      - name: Upload Laravel logs if failure
         if: failure()
         uses: actions/upload-artifact@v4
         with:
