--- a/.github/workflows/playwright_test.yml
+++ b/.github/workflows/playwright_test.yml
@@ -1,8 +1,10 @@
-name: UnoPim + DAM + Playwright CI
+name: UnoPim Playwright Tests
 
 on:
   push:
+    branches: [ master ]
   pull_request:
+    branches: [ master ]
 
 jobs:
   test:
@@ -11,96 +13,90 @@ jobs:
     services:
       mysql:
         image: mysql:8.0
+        ports:
+          - 3306:3306
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: unopim
-        ports:
-          - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping -h 127.0.0.1 -uroot -proot"
+          --health-cmd="mysqladmin ping --silent"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=5
+          --health-retries=3
 
     steps:
-      - name: Checkout UnoPim
-        uses: actions/checkout@v4
-        with:
-          repository: unopim/unopim
-          path: unopim
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Checkout DAM module
-        uses: actions/checkout@v4
-        with:
-          repository: kunal-webkul/unopim-digital-asset-management
-          path: unopim-dam
-
-      - name: Setup PHP
+      - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.2
-          extensions: mbstring, bcmath, pdo_mysql, fileinfo, curl, intl
-          tools: composer:v2
+          php-version: '8.2'
+          extensions: mbstring, bcmath, pdo_mysql
+          coverage: none
 
-      - name: Install UnoPim
-        working-directory: unopim
-        run: |
-          composer install
-          cp .env.example .env
-          sed -i "s|^APP_ENV=.*|APP_ENV=testing|" .env
-          sed -i "s|^DB_HOST=.*|DB_HOST=127.0.0.1|" .env
-          sed -i "s|^DB_PORT=.*|DB_PORT=3306|" .env
-          sed -i "s|^DB_DATABASE=.*|DB_DATABASE=unopim|" .env
-          sed -i "s|^DB_USERNAME=.*|DB_USERNAME=root|" .env
-          sed -i "s|^DB_PASSWORD=.*|DB_PASSWORD=root|" .env
-          php artisan key:generate
-          php artisan migrate --force
-
-      - name: Install DAM module manually
-        working-directory: unopim
-        run: |
-          mkdir -p packages/Webkul
-          cp -r ../unopim-dam/src packages/Webkul/DAM
-          composer config repositories.dam '{"type": "path", "url": "packages/Webkul/DAM"}'
-          composer dump-autoload
-          php artisan optimize:clear
-          php artisan vendor:publish --provider="Webkul\\DAM\\Providers\\DAMServiceProvider"
-
-      - name: Serve UnoPim instance
-        working-directory: unopim
-        run: php artisan serve --host=0.0.0.0 --port=8000 &
-
-      - name: Wait for UnoPim to be ready
-        run: |
-          npx wait-on http://127.0.0.1:8000 --timeout 60000
-          sleep 5
-
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'
 
-      - name: Install Playwright dependencies
-        working-directory: unopim/tests/e2e-pw
+      - name: Copy or Create .env
+        run: |
+          if [ -f .env.example ]; then
+            cp .env.example .env
+          else
+            cat > .env <<EOL
+APP_NAME=UnoPim
+APP_ENV=testing
+APP_KEY=
+APP_DEBUG=true
+APP_URL=http://127.0.0.1:8000
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=unopim
+DB_USERNAME=root
+DB_PASSWORD=root
+
+CACHE_DRIVER=file
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+EOL
+          fi
+
+      - name: Install PHP dependencies
+        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+
+      - name: Generate key and migrate
+        run: |
+          php artisan key:generate
+          php artisan migrate:fresh --seed
+
+      - name: Install DAM module
+        run: composer require unopim/dam
+
+      - name: Build frontend
         run: |
           npm install
-          npx playwright install-deps chromium
-          npx playwright install chromium
+          npm run build
 
-      - name: Run Playwright tests
-        working-directory: unopim/tests/e2e-pw
-        run: npx playwright test --reporter=html
+      - name: Start Laravel server in background
+        run: nohup php artisan serve --host=127.0.0.1 --port=8000 > server.log 2>&1 &
+
+      - name: Wait for Laravel admin login page
+        run: npx wait-on http://127.0.0.1:8000/admin/login
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps chromium
+
+      - name: Run Playwright Tests
+        run: npx playwright test --reporter=list=html --timeout=60000
 
       - name: Upload Playwright report
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: playwright-report
-          path: unopim/tests/e2e-pw/playwright-report
-
-      - name: Upload Laravel logs if failure
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: laravel-logs
-          path: unopim/storage/logs/laravel.log
+          path: playwright-report
