--- a/.github/workflows/playwright_test.yml
+++ b/.github/workflows/playwright_test.yml
@@ -92,7 +92,7 @@ EOL
         run: npx playwright install --with-deps chromium
 
       - name: Run Playwright Tests
-        run: npx playwright test --reporter=list=html --timeout=60000
+        run: npx playwright test --reporter=html --timeout=60000
 
       - name: Upload Playwright report
         if: always()
