--- a/.github/workflows/playwright_test.yml
+++ b/.github/workflows/playwright_test.yml
@@ -2,9 +2,9 @@ name: UnoPim Playwright Tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   test:
@@ -13,8 +13,6 @@ jobs:
     services:
       mysql:
         image: mysql:8.0
-        ports:
-          - 3306:3306
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: unopim
@@ -23,17 +21,20 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=3
+        ports:
+          - 3306:3306
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          extensions: mbstring, bcmath, pdo_mysql
+          extensions: mbstring, bcmath, pdo_mysql, curl, fileinfo, gd, intl, openssl, tokenizer, zip
           coverage: none
+          tools: composer:v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -45,7 +46,7 @@ jobs:
           if [ -f .env.example ]; then
             cp .env.example .env
           else
-            cat > .env <<EOL
+            cat > .env << 'EOL'
 APP_NAME=UnoPim
 APP_ENV=testing
 APP_KEY=
@@ -72,31 +73,46 @@ EOL
       - name: Generate key and migrate
         run: |
           php artisan key:generate
-          php artisan migrate:fresh --seed
+          php artisan migrate:fresh --seed --force
 
       - name: Install DAM module
         run: composer require unopim/dam
 
       - name: Build frontend
         run: |
-          npm install
+          npm ci
           npm run build
 
       - name: Start Laravel server in background
-        run: nohup php artisan serve --host=127.0.0.1 --port=8000 > server.log 2>&1 &
+        run: |
+          php artisan serve --host=127.0.0.1 --port=8000 > server.log 2>&1 &
+          SERVER_PID=$!
+          echo "SERVER_PID=$SERVER_PID" >> $GITHUB_ENV
 
       - name: Wait for Laravel admin login page
-        run: npx wait-on http://127.0.0.1:8000/admin/login
+        run: |
+          npx wait-on http://127.0.0.1:8000/admin/login --timeout 30000
+          sleep 5
+
+      - name: Install Playwright
+        run: npm install -g @playwright/test
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps chromium
 
       - name: Run Playwright Tests
-        run: npx playwright test --reporter=list=html --timeout=60000
+        run: npx playwright test --reporter=list,html --timeout=60000
+
+      - name: Stop Laravel server
+        if: always()
+        run: |
+          if [ -n "$SERVER_PID" ]; then
+            kill $SERVER_PID 2>/dev/null || true
+          fi
 
       - name: Upload Playwright report
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: playwright-report
+          path: playwright-report/
